# LxGeoCppLibs

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/IO_DATA/: CMakeLists.txt
libs/IO_DATA/include/: GDAL_OPENCV_IO.h  export_io_data.h  io_raster.h  io_shapefile.h
libs/IO_DATA/include/lightweight/: geoimage.h  geovector.h  raster_profile.h  vector_profile.h
libs/IO_DATA/include/stitching/: raster_stitcher.h
libs/IO_DATA/src/: GDAL_OPENCV_IO.cpp  io_raster.cpp
libs/shared/: CMakeLists.txt
libs/shared/include/: combinations.h  coords.h  defs.h  defs_boost.h  defs_cgal.h  defs_common.h  defs_ogr.h  defs_opencv.h  export_shared.h  geometry_lab.h  io_shapefile.h  polygonizer_graph.h  polygonizer_graph_wrapper.h  spatial_coord_transformer.h
libs/shared/include/affine_geometry/: affine_transformer.h
libs/shared/include/aggregators/: aggregator.h
libs/shared/include/cli/: base_parameters.h
libs/shared/include/cli/common_options/: device.h  grid_options.h  single_value_enum.h
libs/shared/include/data_structures/: support_points.h
libs/shared/include/design_pattern/: cache.h  circular_range_wrapper.h  defaultmap.h  extended_iterators.h
libs/shared/include/gdal_algs_wrap/: gdal_proximity.h  gdal_rasterize.h
libs/shared/include/geometries_with_attributes/: geometries_with_attributes.h  geometries_with_attributes.tpp  linestring_with_attributes.h  point_with_attribute.h  polygon_with_attributes.h
libs/shared/include/geometry_constructor/: grid.h
libs/shared/include/geometry_rasterizer/: individual_masks.h
libs/shared/include/graph_weights/: polygons_spatial_weights.h  spatial_weights.h
libs/shared/include/io/: GDAL_OPENCV_IO.h  export_io_data.h  io_raster.h  io_shapefile.h
libs/shared/include/io/lightweight/: geoimage.h  geovector.h  raster_profile.h  vector_profile.h
libs/shared/include/io/stitching/: raster_stitcher.h
libs/shared/include/numcpp/: arrays.h  line_space.h  stats.h
libs/shared/include/optim_algo/: min_search_golden_section.h  particle_swarm.h
libs/shared/include/orientations/: common_orientations.h
libs/shared/include/relationships/: composition_struct.h
libs/shared/include/satellites/: formulas.h  imd.h
libs/shared/include/soaked_geometries/: def_soaked_geometries.h
libs/shared/include/spatial_datasets/: patchified_dataset.h  patchified_r_raster_dataset.h  patchified_w_raster_dataset.h  patchified_w_vector_dataset.h
libs/shared/include/spatial_index/: spatial_indexed_geometry_container.h
libs/shared/include/stitchable_geometries/: def_stitched_geoms.h  stitching_options.h
libs/shared/include/stitching/: vector_on_raster_stitcher.h
libs/shared/include/topology/: topology_datastructure.h
libs/shared/include/tqdm/: tqdm.h
libs/shared/src/: defs.cpp  geometry_lab.cpp  io_shapefile.cpp  polygonizer_graph.cpp
libs/shared/src/affine_geometry/: affine_transformer.cpp
libs/shared/src/data_structures/: support_points.cpp
libs/shared/src/gdal_algs_wrap/: gdal_proximity.cpp  gdal_rasterize.cpp
libs/shared/src/io/: GDAL_OPENCV_IO.cpp  io_raster.cpp
libs/shared/src/io/stitching/: raster_stitcher.cpp
libs/shared/src/numcpp/: line_space.cpp
libs/shared/src/satellites/: imd.cpp
libs/shared/src/stitching/: vector_on_stitcher.cpp
